--- a/chaincash_store/Cargo.toml
+++ b/chaincash_store/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+diesel = { version = "2.1.3", features = ["sqlite", "r2d2"] }
+diesel_migrations = "2.1.0"
+thiserror = "1.0.44"
