--- a/chaincash_cli/Cargo.toml
+++ b/chaincash_cli/Cargo.toml
@@ -11,3 +11,4 @@ clap = { version = "4.3.23", features = ["derive"] }
 listenfd = "1.0.1"
 tokio = { version = "1", features = ["full"] }
 chaincash_server = { path = "../chaincash_server" }
+chaincash_store = { path = "../chaincash_store" }
