add app crate and config file support

--- a/chaincash_server/Cargo.toml
+++ b/chaincash_server/Cargo.toml
@@ -11,6 +11,7 @@ hyper = { version = "0.14.27", features = ["full"] }
 tracing = "0.1.37"
 thiserror = "1.0.44"
 chaincash_store = { path = "../chaincash_store" }
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
