--- a/chaincash_store/Cargo.toml
+++ b/chaincash_store/Cargo.toml
@@ -8,3 +8,4 @@ license = "CC0-1.0"
 diesel = { version = "2.1.3", features = ["sqlite", "r2d2"] }
 diesel_migrations = "2.1.0"
 thiserror = "1.0.44"
+serde = { version = "1.0", features = ["derive"] }
