init predicates crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
   "chaincash_server",
   "chaincash_cli",
   "chaincash_store",
-  "chaincash_app"
+  "chaincash_app",
+  "chaincash_predicate"
 ]
