--- a/chaincash_offchain/Cargo.toml
+++ b/chaincash_offchain/Cargo.toml
@@ -7,3 +7,7 @@ license = "CC0-1.0"
 [dependencies]
 once_cell = "1.18.0"
 ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "master", package = "ergo-lib", features = ["compiler"] }
+ergo-node-interface = "0.4.0"
+# required for Url struct, should instead be re-exported from `ergo-node-interface` in the future
+reqwest = { version = "0.11.4", features = ["blocking"] }
+serde = { workspace = true }
