--- a/chaincash_offchain/Cargo.toml
+++ b/chaincash_offchain/Cargo.toml
@@ -7,7 +7,5 @@ license = "CC0-1.0"
 [dependencies]
 once_cell = "1.18.0"
 ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "master", package = "ergo-lib", features = ["compiler"] }
-ergo-node-interface = "0.4.0"
-# required for Url struct, should instead be re-exported from `ergo-node-interface` in the future
-reqwest = { version = "0.11.4", features = ["blocking"] }
+ergo-node-interface = { git = "https://github.com/ergoplatform/ergo-node-interface-rust.git", branch = "develop" }
 serde = { workspace = true }
