--- a/chaincash_offchain/Cargo.toml
+++ b/chaincash_offchain/Cargo.toml
@@ -9,3 +9,4 @@ once_cell = "1.18.0"
 ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "master", package = "ergo-lib", features = ["compiler"] }
 ergo-node-interface = { git = "https://github.com/ergoplatform/ergo-node-interface-rust.git", branch = "develop" }
 serde = { workspace = true }
+thiserror = { workspace = true }
