--- a/.github/workflows/audit.yaml
+++ b/.github/workflows/audit.yaml
@@ -8,7 +8,9 @@ jobs:
   audit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          submodules: 'true'
       - name: cargo-deny
         uses: EmbarkStudios/cargo-deny-action@v1
         with:
