--- a/deny.toml
+++ b/deny.toml
@@ -16,6 +16,11 @@ unmaintained = "deny"
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
+# temporary, new versions of these crates need to be published
+allow-git = [
+  "https://github.com/ergoplatform/sigma-rust.git",
+  "https://github.com/ergoplatform/ergo-node-interface-rust.git"
+]
 
 [licenses]
 default = "allow"
