--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@
 members = ["crates/*"]
 
 [workspace.dependencies]
+serde_json = "1.0.108"
 thiserror = "1.0.44"
 listenfd = "1.0.1"
 serde = { version = "1.0", features = ["derive"] }
