--- a/crates/chaincash_predicate/Cargo.toml
+++ b/crates/chaincash_predicate/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 license = "CC0-1.0"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-toml = "0.8.6"
-thiserror = "1.0.44"
+serde = { workspace = true, features = ["derive"] }
+toml = { workspace = true }
+thiserror = { workspace = true }
