--- a/crates/chaincash_store/Cargo.toml
+++ b/crates/chaincash_store/Cargo.toml
@@ -6,7 +6,7 @@ license = "CC0-1.0"
 
 [dependencies]
 
-diesel = { workspace = true, features = ["sqlite", "r2d2"] }
+diesel = { workspace = true }
 diesel_migrations = { workspace = true }
 thiserror = { workspace = true }
-serde = { workspace = true, features = ["derive"] }
+serde = { workspace = true }
