--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,6 @@ tower = "0.4.13"
 diesel = { version = "2.1.3", features = ["sqlite", "r2d2"] }
 diesel_migrations = "2.1.0"
 hyper = { version = "0.14.27", features = ["full"] }
-chaincash_store = { path = "../chaincash_store" }
-chaincash_app = { path = "../chaincash_app" }
-chaincash_server = { path = "../chaincash_server" }
+chaincash_store = { path = "./crates/chaincash_store" }
+chaincash_app = { path = "./crates/chaincash_app" }
+chaincash_server = { path = "./crates/chaincash_server" }
