--- a/crates/chaincash_predicate/Cargo.toml
+++ b/crates/chaincash_predicate/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 license = "CC0-1.0"
 
 [dependencies]
-serde = { workspace = true, features = ["derive"] }
+serde = { workspace = true }
 toml = { workspace = true }
 thiserror = { workspace = true }
