--- a/crates/chaincash_server/Cargo.toml
+++ b/crates/chaincash_server/Cargo.toml
@@ -5,13 +5,13 @@ edition = "2021"
 license = "CC0-1.0"
 
 [dependencies]
-axum = { workspace = true }
-tower = { workspace = true }
-hyper = { workspace = true }
+axum = "0.6.20"
+tower = "0.4.13"
+hyper = { version = "0.14.27", features = ["full"] }
 tracing = { workspace = true }
-thiserror = { workspace = true }
 chaincash_store = { workspace = true }
+thiserror = { workspace = true }
 serde = { workspace = true }
 
 [dev-dependencies]
-tokio = { version = "1", features = ["full"] }
+tokio = { workspace = true }
