--- a/crates/chaincash_cli/Cargo.toml
+++ b/crates/chaincash_cli/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 license = "CC0-1.0"
 
 [dependencies]
-tracing-subscriber = { workspace = true }
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+chaincash_app = { path = "../chaincash_app" }
+clap = { version = "4.3.23", features = ["derive"] }
 tracing = { workspace = true }
-clap = { workspace = true }
 listenfd = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
-chaincash_app = { workspace = true }
