--- a/crates/chaincash_store/Cargo.toml
+++ b/crates/chaincash_store/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2021"
 license = "CC0-1.0"
 
 [dependencies]
-
-diesel = { workspace = true }
-diesel_migrations = { workspace = true }
+diesel = { version = "2.1.3", features = ["sqlite", "r2d2"] }
+diesel_migrations = "2.1.0"
 thiserror = { workspace = true }
 serde = { workspace = true }
