--- a/crates/chaincash_cli/Cargo.toml
+++ b/crates/chaincash_cli/Cargo.toml
@@ -8,6 +8,7 @@ license = "CC0-1.0"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 chaincash_app = { path = "../chaincash_app" }
 clap = { version = "4.3.23", features = ["derive"] }
+human-panic = { version = "1.2.2" }
 tracing = { workspace = true }
 listenfd = { workspace = true }
 tokio = { workspace = true }
