--- a/crates/chaincash_server/Cargo.toml
+++ b/crates/chaincash_server/Cargo.toml
@@ -7,6 +7,7 @@ license = "CC0-1.0"
 [dependencies]
 chaincash_offchain = { path = "../chaincash_offchain" }
 chaincash_store = { path = "../chaincash_store" }
+chaincash_predicate = { path = "../chaincash_predicate" }
 axum = "0.6.20"
 tower = "0.4.13"
 hyper = { version = "0.14.27", features = ["full"] }
