--- a/crates/chaincash_cli/Cargo.toml
+++ b/crates/chaincash_cli/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "chaincash_cli"
-version = "0.1.0"
-edition = "2021"
-license = "CC0-1.0"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 
 [dependencies]
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
