--- a/crates/chaincash_offchain/Cargo.toml
+++ b/crates/chaincash_offchain/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "chaincash_offchain"
-version = "0.1.0"
-edition = "2021"
-license = "CC0-1.0"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 
 [dependencies]
 once_cell = "1.18.0"
