--- a/crates/chaincash_predicate/Cargo.toml
+++ b/crates/chaincash_predicate/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "chaincash_predicate"
-version = "0.1.0"
-edition = "2021"
-license = "CC0-1.0"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 
 [dependencies]
 toml = "0.8.6"
