--- a/crates/chaincash_store/Cargo.toml
+++ b/crates/chaincash_store/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "chaincash_store"
-version = "0.1.0"
-edition = "2021"
-license = "CC0-1.0"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 
 [dependencies]
 diesel = { version = "2.1.3", features = ["sqlite", "r2d2"] }
