--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ thiserror = "1.0.44"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1.37"
+ergo_client = { git = "https://github.com/ross-weir/ergo_client.git" }
