--- a/crates/chaincash_cli/Cargo.toml
+++ b/crates/chaincash_cli/Cargo.toml
@@ -13,3 +13,4 @@ clap = { version = "4.3.23", features = ["derive"] }
 human-panic = { version = "1.2.2" }
 tokio = { workspace = true }
 anyhow = "1.0.75"
+tracing-appender = "0.2.3"
