Add OS-dependent log directory paths

--- a/crates/chaincash_cli/Cargo.toml
+++ b/crates/chaincash_cli/Cargo.toml
@@ -14,3 +14,4 @@ human-panic = { version = "1.2.2" }
 tokio = { workspace = true }
 anyhow = "1.0.75"
 tracing-appender = "0.2.3"
+directories = "5.0.1"
