--- a/config/predicates/example.toml
+++ b/config/predicates/example.toml
@@ -2,7 +2,7 @@
 type = "or"
 conditions = [
     # the owner of the note is either PK1 or PK2
-    {type = "whitelist", agents = ["PK1", "PK2"]},
+    {type = "whitelist", kind = "owner", agents = ["PK1", "PK2"]},
     # the note has at least 100% collateral
     {type = "collateral", percent = 100}
 ]
