--- a/crates/chaincash_offchain/Cargo.toml
+++ b/crates/chaincash_offchain/Cargo.toml
@@ -6,7 +6,7 @@ license.workspace = true
 
 [dependencies]
 once_cell = "1.18.0"
-ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "master", package = "ergo-lib", features = ["compiler"] }
+ergo_lib = { workspace = true }
 bs58 = "0.5.0"
 ergo_client = { workspace = true }
 serde = { workspace = true }
