more work, everything building again

--- a/crates/chaincash_server/Cargo.toml
+++ b/crates/chaincash_server/Cargo.toml
@@ -8,6 +8,7 @@ license.workspace = true
 chaincash_offchain = { path = "../chaincash_offchain" }
 chaincash_store = { path = "../chaincash_store" }
 chaincash_predicate = { path = "../chaincash_predicate" }
+chaincash_services = { path = "../chaincash_services" }
 axum = "0.7.1"
 tower = "0.4.13"
 hyper = { version = "0.14.27", features = ["full"] }
