--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1.37"
 ergo_client = { git = "https://github.com/ross-weir/ergo_client.git" }
-ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "master", package = "ergo-lib", features = ["compiler"] }
+ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "master", package = "ergo-lib", features = [
+    "compiler",
+] }
