--- a/crates/chaincash_offchain/Cargo.toml
+++ b/crates/chaincash_offchain/Cargo.toml
@@ -14,3 +14,11 @@ thiserror = { workspace = true }
 ergo_avltree_rust = "0.1.0"
 sigma-ser = "0.13.0"
 tracing = { workspace = true }
+
+[dev-dependencies]
+ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "master", package = "ergo-lib", features = [
+    "compiler",
+    "arbitrary",
+] }
+proptest = "1.0"
+proptest-derive = "0.3"
