Add spend note transaction

--- a/crates/chaincash_offchain/Cargo.toml
+++ b/crates/chaincash_offchain/Cargo.toml
@@ -14,6 +14,8 @@ thiserror = { workspace = true }
 ergo_avltree_rust = "0.1.0"
 sigma-ser = "0.13.0"
 tracing = { workspace = true }
+k256 = "0.13.3"
+rand = { version = "0.8.5", features = ["std", "std_rng"] }
 
 [dev-dependencies]
 ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "master", package = "ergo-lib", features = [
