--- a/crates/chaincash_services/Cargo.toml
+++ b/crates/chaincash_services/Cargo.toml
@@ -6,6 +6,7 @@ license.workspace = true
 
 [dependencies]
 bs58 = "0.5.0"
+serde = { workspace = true }
 ergo_lib = { workspace = true }
 ergo_client = { workspace = true }
 chaincash_store = { path = "../chaincash_store" }
