--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,6 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1.37"
 ergo_client = { git = "https://github.com/SethDusek/ergo_client.git" }
-ergo_lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "develop", package = "ergo-lib", features = [
+ergo-lib = { version = "0.28.0", features = [
     "compiler",
 ] }
