--- a/crates/chaincash_services/Cargo.toml
+++ b/crates/chaincash_services/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 [dependencies]
 bs58 = "0.5.0"
 serde = { workspace = true }
-ergo_lib = { workspace = true }
+ergo-lib = { workspace = true }
 ergo_client = { workspace = true }
 chaincash_store = { path = "../chaincash_store" }
 chaincash_offchain = { path = "../chaincash_offchain" }
