--- a/crates/chaincash_store/Cargo.toml
+++ b/crates/chaincash_store/Cargo.toml
@@ -12,6 +12,7 @@ diesel = { version = "2.1.3", features = [
     "returning_clauses_for_sqlite_3_35",
 ] }
 diesel_migrations = "2.1.0"
+libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
 thiserror = { workspace = true }
 serde = { workspace = true }
 ergo-lib = { workspace = true }
