--- a/.github/workflows/fmt-lint-test.yaml
+++ b/.github/workflows/fmt-lint-test.yaml
@@ -1,5 +1,12 @@
 name: Format, Lint and Test
-on: [push]
+
+on:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - master
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
